--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "(cd src/data && node convertCSVtoJSON.js) && vite",
+        "dev": "(cd src/data && node convertCSVtoJSON.js) && (cd ../../ && vite)",
         "build": "vite build",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
@@ -12,12 +12,13 @@
     "dependencies": {
         "csvtojson": "^2.0.10",
         "fs": "^0.0.1-security",
+        "json-server": "^1.0.0-beta.0",
         "path": "^0.12.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.23.0",
         "recharts": "^2.12.7",
-    "yarn": "^1.22.22"
+        "yarn": "^1.22.22"
     },
     "devDependencies": {
         "@types/react": "^18.2.66",
