6/6 dongwoo -> main 병합후 오류 수정

--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "(cd src/data && node convertCSVtoJSON.js) && vite",
+        "dev": "(cd src/data && node convertCSVtoJSON.js) && (cd ../../ && vite)",
         "build": "vite build",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
